bynkc/tests/fixtures/negative/380_test_unknown_actor/src/demo/api.bynk
context demo.api
type UserId = String where NonEmpty
actor User { auth = Bearer(secret = "S"), identity = UserId }
type Title = String where NonEmpty
service api from http {
  on GET("/items") () -> Effect[HttpResult[Title]] by u: User {
    Ok("x")
  }
}
